[package]
name = "ellipse_fit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdvis-core = { path = "../standard-vision/stdvis-core" }
vision_tapes = { path = "../vision_tapes" }
nalgebra = "0.30.1"
